--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,23 @@
   <groupId>com.trioptimum</groupId>
   <artifactId>shodan</artifactId>
   <version>0.1</version>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.trioptimum.shodan.Main</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
