--- a/appspec.yml
+++ b/appspec.yml
@@ -23,8 +23,13 @@ os: linux
 #   "files" section altogether. A blank or incomplete "files" section
 #   may cause associated deployments to fail.
 files:
-  - source: target/shodan-0.1.jar
+  - source: target/shodan-*.jar
     destination: /home/ec2-user/shodan/bin
+
+permissions:
+  - object: /home/ec2-user/shodan
+    owner: ec2-user
+    group: ec2-user
 
 hooks:
 # During the ApplicationInstall deployment lifecycle event, run the commands
