--- a/appspec.yml
+++ b/appspec.yml
@@ -57,6 +57,8 @@ hooks:
 # During the ApplicationStop deployment lifecycle event, run the commands
 #   in the script specified in "location" starting from the root of the
 #   revision's file bundle.
+# To troubleshoot a deployment that fails during the ApplicationStop deployment lifecycle event:
+#   http://docs.aws.amazon.com/codedeploy/latest/userguide/troubleshooting-deployments.html#troubleshooting-deployments-applicationstop
   ApplicationStop:
     - location: scripts/stop
       timeout: 5
