--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.trioptimum</groupId>
   <artifactId>shodan</artifactId>
-  <version>0.7</version>
+  <version>0.8</version>
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
   <build>
     <plugins>
